deploy: 3076ca08c9214e9900e41379eb809552e7be28aa

--- a/aggregate/index.html
+++ b/aggregate/index.html
@@ -913,7 +913,7 @@
 </section>
 <section id="continuons" class="slide level2" data-background-image="sidebar.png" data-background-size="5% 100%" data-background-position="left">
 <h2>Continuons !</h2>
-<p>La suite : <a href="">Agréger des données, la suite !</a></p>
+<p>La suite : <a href="https://sql.breant.art/aggregate-2">Agréger des données, la suite !</a></p>
 
 <img src="../_extensions/ArthurData/lille-univ/logo.jpg" class="slide-logo r-stretch"><div class="footer footer-default">
 <p><strong>Agréger des données</strong></p>
