--- a/join/index.html
+++ b/join/index.html
@@ -611,7 +611,7 @@
 </div>
 <p>2 questions :</p>
 <ol type="1">
-<li>Quelles sont les étudiants avec le nom ayant reçu une mention bien et très bien ?</li>
+<li>Qui sont les étudiants avec le nom ayant reçu une mention bien et très bien ?</li>
 <li>Quelle est la répartition des mentions selon le genre des étudiants ?</li>
 </ol>
 </section>
