--- a/examen/index.html
+++ b/examen/index.html
@@ -189,7 +189,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="question-1" class="level4">
 <h4 class="anchored" data-anchor-id="question-1">Question 1</h4>
-<p>Créer une base de données : soit en mémoire (avec <code>:memory</code>), soit avec SQLite.</p>
+<p>Créer une base de données : soit en mémoire (avec <code>:memory:</code>), soit avec SQLite.</p>
 <p>Ajouter ces deux tables (<code>games</code> et <code>platforms</code>) dans votre base de données.</p>
 </section>
 <section id="question-2" class="level4">
